NTR - Improve to SW6 plugin standard

--- a/src/Resources/app/administration/src/module/swag-order-mail-distributor/page/swag-order-mail-distributor-detail/swag-order-mail-distributor-detail.html.twig
+++ b/src/Resources/app/administration/src/module/swag-order-mail-distributor/page/swag-order-mail-distributor-detail/swag-order-mail-distributor-detail.html.twig
@@ -3,7 +3,7 @@
 
         {% block swag_order_mail_distributor_detail_header %}
             <template #smart-bar-header>
-                <h2>{{ placeholder(distribution, 'name', $tc('swag-order-mail-distributor.detail.textHeadline')) }}</h2>
+                <h2>{{ placeholder(distribution, 'mailTo', $tc('swag-order-mail-distributor.detail.textHeadline')) }}</h2>
             </template>
         {% endblock %}
 
@@ -69,6 +69,7 @@
                                 entity="mail_template_type"
                                 :label="$tc('swag-order-mail-distributor.detail.labelMailTemplate')"
                                 :placeholder="placeholder(distribution, 'mailTemplateTypeId', $tc('swag-order-mail-distributor.detail.placeholderMailTemplate'))"
+                                :criteria="createTemplateTypeCriteria()"
                                 v-model="distribution.mailTemplateTypeId"
                                 labelProperty="name"
                                 required>
